deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red.hardill.me.uk
  template:
    metadata:
      labels:
        app: node-red.hardill.me.uk
    spec:
      containers:
      - name: node-red
        image: containers.hardill.me.uk/testing/node-red-operator:latest
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 8443
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  type: NodePort
  selector:
    app: node-red.hardill.me.uk
  ports:
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: node-red.hardill.me.uk
webhooks:
- name: node-red.hardill.me.uk
  # namespaceSelector:
  #   matchExpressions:
  #   - key: kubernetes.io/metadata.name
  #     operator: In
  #     values: 
  #       - groupOne
  rules:
  - apiGroups:   [ "k8s.hardill.me.uk" ]
    apiVersions: [ "v1", "k8s.hardill.me.uk/v1" ]
    resources:   [ "node-reds" ]
    operations:  [ "CREATE", "DELETE" ]
    scope:       Namespaced
  clientConfig:
    service:
      namespace: default
      name: node-red
      path: /mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZzekNDQTV1Z0F3SUJBZ0lVVGFPb0crTE9BcXA0Z1J4WW83VUhjOFlzTVo0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FURUxNQWtHQTFVRUJoTUNSMEl4R0RBV0JnTlZCQWdNRDBkc2IzVmpaWE4wWlhKemFHbHlaVEVpTUNBRwpBMVVFQ2d3WlNHRnlaR2xzYkNCVVpXTm9ibTlzYjJkcFpYTWdUSFJrTGpFUE1BMEdBMVVFQ3d3R1N6aHpJRU5CCk1Rc3dDUVlEVlFRRERBSkRRVEFlRncweU1qRXlNREl5TXpFMk1UQmFGdzB5TXpBeE1ERXlNekUyTVRCYU1Ha3gKQ3pBSkJnTlZCQVlUQWtkQ01SZ3dGZ1lEVlFRSURBOUhiRzkxWTJWemRHVnljMmhwY21VeElqQWdCZ05WQkFvTQpHVWhoY21ScGJHd2 [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
  reinvocationPolicy: "Never"
