deployment/testing.yml
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  type: ExternalName
  externalName: 192.168.1.114
  ports:
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: node-red.hardill.me.uk
webhooks:
- name: node-red.hardill.me.uk
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: In
      values: 
        - groupOne
  rules:
  - apiGroups:   [ "k8s.hardill.me.uk" ]
    apiVersions: [ "v1", "k8s.hardill.me.uk" ]
    resources:   [ "node-reds" ]
    operations:  [ "CREATE" ]
    scope:       Namespaced
  clientConfig:
    service:
      namespace: default
      name: node-red
      path: /create
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZzekNDQTV1Z0F3SUJBZ0lVWm91NXdrUGMxcng2UmQyZHNLTGxkOHAxaWpnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FURUxNQWtHQTFVRUJoTUNSMEl4R0RBV0JnTlZCQWdNRDBkc2IzVmpaWE4wWlhKemFHbHlaVEVpTUNBRwpBMVVFQ2d3WlNHRnlaR2xzYkNCVVpXTm9ibTlzYjJkcFpYTWdUSFJrTGpFUE1BMEdBMVVFQ3d3R1N6aHpJRU5CCk1Rc3dDUVlEVlFRRERBSkRRVEFlRncweU5ERXlNakl4TmpNek16SmFGdzB5TlRBeE1qRXhOak16TXpKYU1Ha3gKQ3pBSkJnTlZCQVlUQWtkQ01SZ3dGZ1lEVlFRSURBOUhiRzkxWTJWemRHVnljMmhwY21VeElqQWdCZ05WQkFvTQpHVWhoY21ScGJHd2 [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
  reinvocationPolicy: "Never"
